remove default from frontend CI file

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -16,4 +16,6 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
+        working-directory: ./frontend
       - run: npm test
+        working-directory: ./frontend
