--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/ --ext .js,.jsx"
+    "lint": "eslint src/ --ext .js,.jsx",
+    "lint-fix": "eslint src/ --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
