Update ESLint config with React plugin, approve console, allow linebreak styles

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,8 +3,10 @@
     "browser": true
   },
   "extends": ["airbnb", "plugin:jest/recommended"],
-  "plugins": ["jest"],
+  "plugins": ["jest", "react"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "linebreak-style": 0,
+    "no-console": 0
   }
 }
