--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
+    "styled-react-modal": "^2.0.1",
     "yup": "^0.29.3"
   },
   "scripts": {
